--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -15,7 +15,7 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes",
-      "version":  0,
+      "version": 0,
       "customized_tasks": {
         "docset_prebuild": [
           "_dependentPackages/CommonPlugins/tools/JoinTOC.ps1"
@@ -42,6 +42,8 @@
       "branch_mapping": {}
     }
   ],
+  "branch_target_mapping": {},
+  "need_generate_pdf_url_template": false,
   "dependent_packages": [
     {
       "id": "Microsoft.OpenPublishing.CommonPlugins",
@@ -50,7 +52,5 @@
       "target_framework": "net45",
       "version": "latest"
     }
-  ],
-  "branch_target_mapping": {},
-  "need_generate_pdf_url_template": false
+  ]
 }
