--- a/WebAPI-reference/dynamics-ce-odata-9/actions.yml
+++ b/WebAPI-reference/dynamics-ce-odata-9/actions.yml
@@ -1,8 +1,9 @@
 ### YamlMime:ODataIndex
-uid: Microsoft.Dynamics.CRM.ActionIndex
-name: Web API Action Reference
-title: "Dynamics 365 Customer Engagement Web API Action Reference | MicrosoftDocs"
-metadata:   
+uid: 123
+name: 123
+title: 123
+metadata:
+  title: 123
   ms.date: "10/20/2017"
   ms.service: "crm-online"
   ms.topic: "reference"
@@ -12,12 +13,12 @@ metadata:
   author: "jimdaly"
   ms.author: "jdaly"
   manager: "jdaly"
-description: "Actions represent operations which may have observable side effects, such as creating or updating records. An Action may require parameters and may return a value. Actions may be bound to entity types."
+description: 123
 in_this_section:
 - type: Microsoft.Dynamics.CRM.AddAppComponents
   description: ""
-- type: Microsoft.Dynamics.CRM.AddItemCampaign
-  description: "Adds an item to a campaign."
+- type: 123
+  description: 123
 - type: Microsoft.Dynamics.CRM.AddItemCampaignActivity
   description: "Adds an item to a campaign activity. "
 - type: Microsoft.Dynamics.CRM.AddListMembersList
