--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -29,6 +29,7 @@
       ]
     }
   ],
+  "use_docfxv3": true,
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
