--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,4 +1,5 @@
 {
+  "docs_build_engine": { "name": "docfx_v2"},
   "package_version":"1.39.0-alpha-578-g5034dfd",
   "docsets_to_publish": [
     {
